# actix-web-boilerplate

./: .gitignore  Cargo.toml  README.md
migrations/2020-12-28-133459_create_users/: up.sql
src/: main.rs  router.rs  schema.rs
src/db/: connection.rs
src/handle/: api_error.rs  api_success.rs  handle_response.rs  mod.rs
src/modules/user/: controller.rs  model.rs  router.rs
tutorial/: actix-web_tutorial_1.md  actix-web_tutorial_2.md
