[package]
name = "actix-web-boilerplate"
version = "0.1.0"
authors = ["wei <503945930@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.2"
chrono = { version = "0.4.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres","r2d2","uuidv07","chrono"] }
lazy_static = "1.4.0"
r2d2 = "0.8.9"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
diesel_migrations = "1.4"
futures = "0.3"